--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
     "lib-flexible": "^0.3.2",
+    "moment": "^2.24.0",
     "vant": "^2.1.2",
     "vue": "^2.5.2",
+    "vue-picture-preview": "^1.3.0",
     "vue-router": "^3.0.1",
+    "vue-wechat-title": "^2.0.5",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
